# darling-security

./: .gitmodules  .security.txt.swp  CMakeLists.txt  README.md  SEC_MANUAL.exp  Security.exp-in  darling-patch-cmds.sh  security.txt
KVSKeychainSyncingProxy/: CMakeLists.txt
KeychainSyncAccountNotification/: CMakeLists.txt
KeychainSyncAccountUpdater/: CMakeLists.txt
OSX/: CMakeLists.txt  ExtraConstants.c
OSX/authd/: CMakeLists.txt
OSX/lib/: version.c
OSX/libsecurity_apple_csp/: CMakeLists.txt
OSX/libsecurity_apple_csp/lib/: HMACSHA1.c  HMACSHA1.h  MD2Object.cpp  MD2Object.h  opensshWrap.cpp
OSX/libsecurity_apple_cspdl/: CMakeLists.txt
OSX/libsecurity_apple_cspdl/lib/: CMakeLists.txt
OSX/libsecurity_apple_file_dl/: CMakeLists.txt
OSX/libsecurity_apple_file_dl/lib/: CMakeLists.txt
OSX/libsecurity_apple_x509_cl/: CMakeLists.txt
OSX/libsecurity_apple_x509_cl/lib/: CMakeLists.txt
OSX/libsecurity_apple_x509_tp/: CMakeLists.txt
OSX/libsecurity_apple_x509_tp/lib/: CMakeLists.txt  security_ocspd  tpCertAllowList.cpp
OSX/libsecurity_asn1/: CMakeLists.txt
OSX/libsecurity_asn1/lib/: CMakeLists.txt
OSX/libsecurity_authorization/: CMakeLists.txt
OSX/libsecurity_authorization/lib/: AuthSession.h  Authorization.c  Authorization.h  CMakeLists.txt
OSX/libsecurity_cdsa_client/: CMakeLists.txt
OSX/libsecurity_cdsa_client/lib/: CMakeLists.txt
OSX/libsecurity_cdsa_plugin/: CMakeLists.txt
OSX/libsecurity_cdsa_plugin/lib/: CLabstractsession.cpp  CMakeLists.txt  CSPabstractsession.cpp  DLabstractsession.cpp  TPabstractsession.cpp
OSX/libsecurity_cdsa_utilities/: CMakeLists.txt
OSX/libsecurity_cdsa_utilities/lib/: CMakeLists.txt  Schema.cpp  cssmalloc.cpp
OSX/libsecurity_cdsa_utils/: CMakeLists.txt
OSX/libsecurity_cdsa_utils/lib/: CMakeLists.txt
OSX/libsecurity_checkpw/: CMakeLists.txt
OSX/libsecurity_checkpw/lib/: CMakeLists.txt
OSX/libsecurity_cms/: CMakeLists.txt
OSX/libsecurity_cms/lib/: CMakeLists.txt
OSX/libsecurity_codesigning/: CMakeLists.txt  SystemPolicy  codesigning_dtrace.h  dispatch
OSX/libsecurity_codesigning/CodeSigningHelper/: CMakeLists.txt
OSX/libsecurity_codesigning/lib/: CSCommon.h  SecAssessment.cpp  SecCode.h  SecCodeHost.h  SecCodeHostLib.h  SecStaticCode.cpp  SecStaticCode.h  SecTask.c  codesigning_dtrace.h  cs.h  cskernel.cpp  csprocess.h  policyengine.cpp
OSX/libsecurity_comcryption/: CMakeLists.txt
OSX/libsecurity_comcryption/lib/: CMakeLists.txt
OSX/libsecurity_cryptkit/: CMakeLists.txt
OSX/libsecurity_cssm/: CMakeLists.txt
OSX/libsecurity_cssm/derived_src/: cssmexports.gen  funcnames.gen
OSX/libsecurity_cssm/lib/: CMakeLists.txt  certextensions.h  cssmconfig.h
OSX/libsecurity_filedb/: CMakeLists.txt
OSX/libsecurity_filedb/lib/: CMakeLists.txt
OSX/libsecurity_keychain/: CMakeLists.txt
OSX/libsecurity_keychain/lib/: CMakeLists.txt  Keychains.cpp  SecAccess.h  SecBase.h  SecFDERecoveryAsymmetricCrypto.cpp  SecInternal.h  SecKey.h  SecKeychain.h  SecTrust.h  Security.h  StorageManager.h
OSX/libsecurity_keychain/libDER/: CMakeLists.txt
OSX/libsecurity_keychain/xpc/: CMakeLists.txt
OSX/libsecurity_keychain/xpc-tsa/: CMakeLists.txt
OSX/libsecurity_manifest/: CMakeLists.txt
OSX/libsecurity_manifest/lib/: CMakeLists.txt
OSX/libsecurity_mds/: CMakeLists.txt
OSX/libsecurity_mds/lib/: CMakeLists.txt  MDSSession.cpp
OSX/libsecurity_ocspd/: CMakeLists.txt
OSX/libsecurity_ocspd/client/: ocspdClient.cpp
OSX/libsecurity_ocspd/common/: ocspd.h
OSX/libsecurity_ocspd/mig/: ocspd_client.cpp  ocspd_server.cpp
OSX/libsecurity_pkcs12/: CMakeLists.txt
OSX/libsecurity_pkcs12/lib/: CMakeLists.txt
OSX/libsecurity_sd_cspdl/: CMakeLists.txt
OSX/libsecurity_sd_cspdl/lib/: CMakeLists.txt
OSX/libsecurity_smime/: CMakeLists.txt
OSX/libsecurity_smime/lib/: CMakeLists.txt  SecAsn1Item.h  cert.c  cmscinfo.c  cmsdecode.c  cmsencode.c  cmspubkey.c  cmssigdata.c  cmssiginfo.c  cmsutil.c  tsaSupport.c  tsaTemplates.c
OSX/libsecurity_ssl/: CMakeLists.txt
OSX/libsecurity_ssl/lib/: CMakeLists.txt  SecureTransport.h  sslContext.c  sslCrypto.c  sslTransport.c
OSX/libsecurity_transform/: CMakeLists.txt  forceinclude.h
OSX/libsecurity_transform/lib/: CMakeLists.txt  SecTransform.h  Utilities.cpp
OSX/libsecurity_translocate/: CMakeLists.txt
OSX/libsecurity_utilities/: CMakeLists.txt  dtrace_fake.h
OSX/libsecurity_utilities/lib/: CMakeLists.txt  ccaudit.cpp  cfclass.cpp  debugging.h  debugging_internal.h  dispatch.h  mach++.h  powerwatch.cpp  refcount.h  simulatecrash_assert.h  utilities.cpp  utilities_dtrace.h
OSX/libsecurityd/: CMakeLists.txt
OSX/libsecurityd/lib/: cshosting.h  cshostingClient.cpp  ss_types.defs  ucsp.h  ucspClientC.c  ucspNotify.h  ucspNotifyReceiver.cpp
OSX/libsecurityd/mig/: cshostingServer.cpp  ucsp.h  ucspNotify.h  ucspNotifySender.cpp  ucspServer.cpp
OSX/libsecurityd/securityd_client/: cshosting.h  cshostingClient.cpp  cshostingServer.cpp  ucsp.h  ucspClientC.c  ucspNotifyReceiver.cpp  ucspNotifySender.cpp  ucspServer.cpp
OSX/regressions/test/: CMakeLists.txt
OSX/sec/: ACMAclDefs.h  CMakeLists.txt  CoreFoundation  ctkclient.h  libDER  libaks_acl_cf_keys.h  utilities
OSX/sec/Security/: CMakeLists.txt  SecBasePriv.h  SecCTKKey.c  SecCertificate.c  SecCertificateInternal.h  SecECKey.h  SecItem.c  SecItemBackup.c  SecItemInternal.h  SecOTRPacketData.h  SecPolicy.c  SecRSAKey.c  SecRecoveryKey.m  SecSharedCredential.m  SecTrust.h  SecTrustStatusCodes.c  SecureObjectSync  certextensions.h
OSX/sec/SecurityTool/: syncbubble.m
OSX/sec/ipc/: server.c
OSX/utilities/: CMakeLists.txt  SecDb.c  SecFileLocations.c  SecKnownFilePaths.m
SecurityTool/: CMakeLists.txt  cmsutil.c  createFVMaster.c  db_commands.cpp  security.c
SecurityTool/macOS/: CMakeLists.txt  cmsutil.c  createFVMaster.c
security-sysdiagnose/: CMakeLists.txt
securityd/: CMakeLists.txt  securityd_dtrace.h
securityd/etc/: com.apple.securityd.plist
securityd/securityd_service/: CMakeLists.txt
securityd/src/: auditevents.cpp  process.cpp  securityd_dtrace.h  server.cpp
supd/: CMakeLists.txt
(+1532 files in other folders)
