project(security_apple_csp)

include_directories(BEFORE
	${CMAKE_CURRENT_SOURCE_DIR}/lib
	${CMAKE_CURRENT_SOURCE_DIR}/open_ssl
	${CMAKE_CURRENT_SOURCE_DIR}/open_ssl/opensslUtils
)

add_definitions(
	-DALLOW_ZERO_PASSWORD
	-DCRYPTKIT_CSP_ENABLE
	-DASC_CSP_ENABLE
	-DCK_SECURITY_BUILD
)

add_library(security_apple_csp OBJECT
	lib/aescsp.cpp
	lib/algmaker.cpp
	lib/AppleCSP.cpp
	lib/AppleCSPContext.cpp
	lib/AppleCSPKeys.cpp
	lib/AppleCSPUtils.cpp
	lib/ascContext.cpp
	lib/bfContext.cpp
	lib/BlockCryptor.cpp
	lib/boxes-ref.c
	lib/bsafeAsymmetric.cpp
	lib/bsafeContext.cpp
	lib/bsafeKeyGen.cpp
	lib/bsafePKCS1.cpp
	lib/bsafeSymmetric.cpp
	lib/castContext.cpp
	lib/cryptkitcsp.cpp
	lib/cspdebugging.c
	lib/deriveKey.cpp
	lib/desContext.cpp
	lib/DH_csp.cpp
	lib/DH_exchange.cpp
	lib/DH_keys.cpp
	lib/DH_utils.cpp
	lib/DigestContext.cpp
	lib/FEEAsymmetricContext.cpp
	lib/FEECSPUtils.cpp
	lib/FEEKeys.cpp
	lib/FEESignatureObject.cpp
	lib/gladmanContext.cpp
	lib/MacContext.cpp
	lib/MD2Object.cpp
	lib/memory.cpp
	lib/miscAlgFactory.cpp
	lib/miscalgorithms.cpp
	lib/pbkdDigest.cpp
	lib/pbkdf2.c
	lib/pkcs12Derive.cpp
	lib/pkcs8.cpp
	lib/rc2Context.cpp
	lib/rc4Context.cpp
	lib/rc5Context.cpp
	lib/rijndael-alg-ref.c
	lib/rijndaelApi.c
	lib/RSA_asymmetric.cpp
	lib/RSA_DSA_csp.cpp
	lib/RSA_DSA_keys.cpp
	lib/RSA_DSA_signature.cpp
	lib/RSA_DSA_utils.cpp
	lib/SHA1_MD5_Object.cpp
	lib/SignatureContext.cpp
	lib/vRijndael-alg-ref.c
	lib/wrapKey.cpp
	lib/wrapKeyCms.cpp
	lib/YarrowConnection.cpp
	open_ssl/bf/bf_ecb.c
	open_ssl/bf/bf_enc.c
	open_ssl/bf/bf_skey.c
	open_ssl/bio/bio_lib.c
	open_ssl/bio/bss_file.c
	open_ssl/bn/bn_add.c
	open_ssl/bn/bn_asm.c
	open_ssl/bn/bn_blind.c
	open_ssl/bn/bn_ctx.c
	open_ssl/bn/bn_div.c
	open_ssl/bn/bn_err.c
	open_ssl/bn/bn_exp.c
	open_ssl/bn/bn_exp2.c
	open_ssl/bn/bn_gcd.c
	open_ssl/bn/bn_lib.c
	open_ssl/bn/bn_mont.c
	open_ssl/bn/bn_mpi.c
	open_ssl/bn/bn_mul.c
	open_ssl/bn/bn_prime.c
	open_ssl/bn/bn_print.c
	open_ssl/bn/bn_rand.c
	open_ssl/bn/bn_recp.c
	open_ssl/bn/bn_shift.c
	open_ssl/bn/bn_sqr.c
	open_ssl/bn/bn_word.c
	open_ssl/buffer/buf_err.c
	open_ssl/buffer/buffer.c
	open_ssl/cryptlib.c
	open_ssl/dh/dh_check.c
	open_ssl/dh/dh_err.c
	open_ssl/dh/dh_gen.c
	open_ssl/dh/dh_key.c
	open_ssl/dh/dh_lib.c
	open_ssl/dsa/dsa_asn1.c
	open_ssl/dsa/dsa_err.c
	open_ssl/dsa/dsa_gen.c
	open_ssl/dsa/dsa_key.c
	open_ssl/dsa/dsa_lib.c
	open_ssl/dsa/dsa_ossl.c
	open_ssl/dsa/dsa_sign.c
	open_ssl/dsa/dsa_vrf.c
	open_ssl/err/err.c
	open_ssl/err/err_prn.c
	open_ssl/ex_data.c
	open_ssl/lhash/lhash.c
	open_ssl/mem.c
	open_ssl/misc/rc2_cbc.c
	open_ssl/misc/rc2_skey.c
	open_ssl/misc/rc5_enc.c
	open_ssl/misc/rc5_skey.c
	open_ssl/opensslUtils/opensslAsn1.cpp
	open_ssl/opensslUtils/opensslUtils.cpp
	open_ssl/rsa/rsa_chk.c
	open_ssl/rsa/rsa_eay.c
	open_ssl/rsa/rsa_err.c
	open_ssl/rsa/rsa_gen.c
	open_ssl/rsa/rsa_lib.c
	open_ssl/rsa/rsa_none.c
	open_ssl/rsa/rsa_null.c
	open_ssl/rsa/rsa_pk1.c
	open_ssl/rsa/rsa_saos.c
	open_ssl/rsa/rsa_sign.c
	open_ssl/rsa/rsa_ssl.c
	open_ssl/stack/stack.c
	lib/AppleCSPBuiltin.cpp
	lib/SHA2_Object.cpp
	lib/HMACSHA1.c
	lib/opensshCoding.cpp
	lib/opensshWrap.cpp
)
